# tinygraph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_build_state_graph.py
notebooks/: pregel_supersteps.ipynb
src/tinygraph/: __init__.py  checkpoint.py  graph.py  reducers.py  state.py
tests/: test_checkpointing.py  test_compile.py  test_conditional_edges.py  test_paralell.py  test_reducers.py  test_smoke.py  test_state_graph.py  test_streaming.py
