[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinygraph"
version = "0.1.0"
description = "a minimalist implementation of LangGrap-like core."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Salah Chadli", email = "salah.chadli@gmail.com" },
]
keywords = ["graph", "llm", "agent", "workflow", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
]




[project.urls]
Homepage = "https://github.com/yourusername/tinygraph"
Issues = "https://github.com/yourusername/tinygraph/issues"

# ────────────────────────────────────────────────────────────────
# Tools configuration
# ────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/tinygraph"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/tinygraph", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=4.5.1",
]
